--- a/task6/six.html
+++ b/task6/six.html
@@ -15,9 +15,15 @@
 			<hr class="hr1" />
 		</div>	
 		<div class="content">
-			
-			<img src="images/left_big_picture.jpg" class="left_big_picture" alt="left_big_picture">
-			
+			<div class="left">
+				
+				<div class="green_png">
+					<img src="images/green.png" alt="green">
+				</div>
+				<div class="red_png">
+					<img src="images/red.png" alt="red">
+				</div>
+			</div>
 			<div class="right_word">
 				<hr class="hr2" />
 				<p class="about">ABOUT</p>
@@ -66,13 +72,19 @@
 			<hr class="blue_big" />
 
 			<div class="right_picture">
-				<img src="images/right_picture.jpg" alt="right_picture">
+				<div>
+					<p>
+						<span>前端技术</span>
+						前端技术前端技术
+					</p>
+				</div>
+
 			</div>
 			
 			<div class="left_paragraph">
 				<p class="small1"><span class="big">前</span>端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前端前端前。</p>
 				<p class="small"><img class="aa" src="images/aa.jpg" alt="picture">前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前端端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端端前端前。</p>
-				<p class="small">前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端。</p>
+				<p class="small">前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端端前端前端前端前端前端前端前端前端前端前端前端前端前端前。</p>
 			</div>
 			
 			<div class="right_paragraph">
